--- a/package.json
+++ b/package.json
@@ -13,12 +13,20 @@
   },
   "dependencies": {
     "@nuxt/content": "^1.14.0",
-    "@nuxtjs/axios": "^5.13.1",
+    "@nuxtjs/auth-next": "5.0.0-1643791578.532b3d6",
+    "@nuxtjs/axios": "^5.13.6",
+    "@nuxtjs/firebase": "^8.2.2",
+    "@nuxtjs/i18n": "^7.2.0",
     "@nuxtjs/pwa": "^3.3.5",
     "boxicons": "^2.0.7",
     "core-js": "^3.9.1",
+    "deepmerge": "^4.2.2",
+    "firebase": "^9.6.6",
+    "material-icons": "^1.10.6",
     "nuxt": "^2.15.3",
-    "vuesax": "^4.0.1-alpha.25"
+    "rollbar": "^2.24.0",
+    "vue-fragment": "^1.5.1",
+    "vuesax": "^3.12.2"
   },
   "devDependencies": {
     "@nuxt/types": "^2.15.3",
