--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -24,7 +24,7 @@ jobs:
         run: yarn
 
       - name: Generate
-        run: yarn generate
+        run: ROUTER_BASE=/swgoh-conquest-tracker/ yarn generate
 
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
