--- a/package.json
+++ b/package.json
@@ -18,13 +18,13 @@
     "@nuxtjs/firebase": "^8.2.2",
     "@nuxtjs/i18n": "^7.2.0",
     "@nuxtjs/pwa": "^3.3.5",
+    "@nuxtjs/sentry": "^5.1.7",
     "boxicons": "^2.0.7",
     "core-js": "^3.9.1",
     "deepmerge": "^4.2.2",
     "firebase": "^9.6.6",
     "material-icons": "^1.10.6",
     "nuxt": "^2.15.3",
-    "rollbar": "^2.24.0",
     "vue-fragment": "^1.5.1",
     "vuesax": "^3.12.2"
   },
