--- a/.gitignore
+++ b/.gitignore
@@ -38,6 +38,10 @@ build/Release
 node_modules/
 jspm_packages/
 
+# Storybook
+.nuxt-storybook
+storybook-static
+
 # TypeScript v1 declaration files
 typings/
 
