--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "generate": "nuxt generate",
     "lint:js": "eslint --ext \".js,.vue\" --ignore-path .gitignore .",
     "lint": "npm run lint:js",
-    "test": "jest"
+    "test": "jest",
+    "missing:texts": "npx vue-i18n-extract report --vueFiles './?(components|layouts|pages)/**/*.?(js|vue)' --languageFiles './locales/*.?(json|yml|yaml)' --output ./locales/missing.json"
   },
   "dependencies": {
     "@nuxt/content": "^1.14.0",
@@ -35,6 +36,7 @@
     "@nuxtjs/device": "^2.1.0",
     "@nuxtjs/eslint-config-typescript": "^6.0.0",
     "@nuxtjs/eslint-module": "^3.0.2",
+    "@nuxtjs/storybook": "^4.2.0",
     "@vue/test-utils": "^1.1.3",
     "babel-core": "7.0.0-bridge.0",
     "babel-eslint": "^10.1.0",
@@ -43,6 +45,7 @@
     "eslint-plugin-nuxt": "^3.1.0",
     "eslint-plugin-vue": "^8.4.1",
     "jest": "^26.6.3",
+    "postcss": "^8.4.6",
     "ts-jest": "^26.5.4",
     "vue-jest": "^3.0.4"
   }
